[package]
name = "tmuntaner-webauthn"
authors = ["Thomas Muntaner <thomas.muntaner@gmail.com>"]
version = "0.1.0-alpha.17"
edition = "2018"
license = "MPL-2.0"
description = "A webauthn client"
homepage = "https://github.com/tmuntaner/webaunth-rs"
repository = "https://github.com/tmuntaner/webauthn-rs"
documentation = "https://docs.rs/tmuntaner-webauthn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
notifications = ["notify-rust"]
progress_bar = ["indicatif"]
full = ["progress_bar", "notifications"]

[dependencies]
anyhow = "1.0"
base64 = "0.21"
url = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
notify-rust = {version ="4", optional = true}
indicatif = { version = "0.17.0", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "^0.44"
features = [
    "Win32_Foundation",
    "Win32_Networking_WindowsWebServices",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
authenticator = "0.3"
sha2 = "0.10"
